Fix the z-index attribute to make the portlet menu visible

--- a/themes/grow-theme/src/css/grow/_portlet.scss
+++ b/themes/grow-theme/src/css/grow/_portlet.scss
@@ -17,5 +17,5 @@
 }
 
 .portlet-topper {
-	z-index: 1;
+	z-index: 1035;
 }
